--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ flask_admin==1.6.0
 Flask-Migrate==4.0.7
 SQLAlchemy==2.0.36
 alembic==1.13.3
-psycopg[binary]==3.2.13
 python-dotenv==1.0.1
 gunicorn==21.2.0
+psycopg[binary]>=3.2.13
