--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,5 @@ SQLAlchemy==2.0.36
 alembic==1.13.3
 python-dotenv==1.0.1
 gunicorn==21.2.0
-psycopg[binary]>=3.2.13
+SQLAlchemy==2.0.36
+psycopg[binary]
