--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Flask-SQLAlchemy==3.1.1
 Flask-Login==0.6.3
 flask_admin==1.6.0
 Flask-Migrate==4.0.7
-SQLAlchemy==2.0.36
+SQLAlchemy<2.0
 alembic==1.13.3
 python-dotenv==1.0.1
 gunicorn==21.2.0
