--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Flask==3.0.3
+Flask==2.2.5
+Flask-Admin==1.6.0
 Flask-SQLAlchemy==2.5.1
 Flask-Login==0.6.3
-flask_admin==1.6.0
 Flask-Migrate==4.0.7
-SQLAlchemy<2.0
+SQLAlchemy==1.4.54
 alembic==1.13.3
 python-dotenv==1.0.1
 gunicorn==21.2.0
