--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,7 @@ services:
     env: python
     region: frankfurt
     buildCommand: pip install -r requirements.txt
-    startCommand: python app.py
+    startCommand: gunicorn app:app
     envVars:
       - key: SECRET_KEY
         sync: false
