--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ Flask-SQLAlchemy==3.1.1
 Flask-Login==0.6.3
 Flask-Admin==1.6.1
 Flask-Migrate==4.0.7
+python-dotenv==1.0.1
 gunicorn==22.0.0
 SQLAlchemy==2.0.36
-psycopg[binary]
+alembic==1.13.3
+psycopg[binary]>=3.2.13,<4
+greenlet>=3.0
